# tarotAI

./: CLI.py  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  STRUCTURE  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run.yml
core/: classCard.py
tarotai/: __init__.py
tarotai/core/: classCard.py  interpreter.py  tarotAI_functions.py
tarotai/core/object/: classCard.py  classSpread.py  loadJSON.py
tarotai/data/: cards.json  spreads.json
tests/: test_functions.py
