[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarotai"
version = "0.1.0"
description = "AI-based Tarot card reading package"
authors = [{name = "Your Name", email = "youremail@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = []
